changed routing for test report and single student report page

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -50,7 +50,7 @@
                         <td>{{i.score}}</td>
                         <td>{{i.percentage}}</td>
                         <td><em class="material-icons">file_download</em></td>
-                        <td class="text-right"><em class="material-icons" (click)="viewIndividualReport(i)">remove_red_eye</em></td>
+                        <td class="text-right"><em class="material-icons" [routerLink]="['individual-report',i.id]">remove_red_eye</em></td>
                     </tr>
                 </tbody>
                 <tfoot>
