naming convention corrected

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -32,7 +32,7 @@
                                 </md-menu>
                             </div>
                             <div class="test-details">
-                                <p class="light-text">{{test.numberofTestQuestions}} Questions</p>
+                                <p class="light-text">{{test.numberOfTestQuestions}} Questions</p>
                                 <p class="light-text">{{test.numberOfTestSections}} Sections</p>
                                 <p class="light-text">{{test.numberOfTestAttendees}} Candidates</p>
                             </div>
