--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -24,13 +24,13 @@
           </md2-accordion-header>
           <div class="collapsible-body p0">
             <div class="select-all">
-              <md-checkbox [(ngModel)]="category.selectAll" (change)="selectAll(category)" [disabled]="!isEditTestEnabled"></md-checkbox>
+              <md-checkbox class="only-checkbox mr10" [(ngModel)]="category.selectAll" (change)="selectAll(category)" [disabled]="!isEditTestEnabled"></md-checkbox>
               <h5>Select All</h5>
               <span class="h7">(total {{category.questionCount}} questions)</span>
             </div>
             <ng-container *ngFor="let question of category.questionList;let i=index">
               <div class="qs-container">
-                <md-checkbox [(ngModel)]="question.question.isSelect" (change)="selectQuestion(question,category)" [disabled]="!isEditTestEnabled"></md-checkbox>
+                <md-checkbox class="only-checkbox mr10" [(ngModel)]="question.question.isSelect" (change)="selectQuestion(question,category)" [disabled]="!isEditTestEnabled"></md-checkbox>
                 <p class="qs-num">Q.{{i+1}}</p>
                 <div class="qs-text">
                   <p class="question" [innerHtml]="question.question.questionDetail"></p>
