--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -3,7 +3,7 @@
     <div class="loader-container" *ngIf="loader">
         <div class="spinner"></div>
     </div>
-    <div class="container">
+    <div class="container" *ngIf="!loader">
       <span *ngIf="!isEditTestEnabled">You can not edit on going Test. Click
         <a [routerLink]="['/tests',testId,'view']">View Test Details</a> to view the details of the Test.
       </span>
