--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -21,9 +21,17 @@
       </span>
     </h1>
     <div class="pull-right">
-        <button type="button" class="btn" (click)="showTestLink = true"><em class="material-icons">link</em> Get Test Link</button>
-        <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
-    </div>
-    <test-link-popover [hidden]="!showTestLink"></test-link-popover>
-  </div>
-</div>
+        <div>
+                    <popover-content #myPopover
+                                     [closeOnClickOutside]="true">
+                        <label>Test Link</label>
+                        <div class="url-container">
+                            <input type="text" class="form-control" [(ngModel)]="testLink" name="link" id="link" #link />
+                            <em class="material-icons" ngxClipboard [cbContent]="testLink" (cbOnSuccess)="copiedContent = true" mdTooltip={{tooltipMessage}} (click)="showTooltipMessage($event,link)" (mouseenter)="changeTooltipMessage()">content_copy</em>
+                        </div>
+                    </popover-content>
+                    <button type="button" class="btn" [popover]="myPopover" (click)="getTestLink()"><em class="material-icons">link</em>Get Test Link</button>
+                    <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
+                </div>
+            </div>
+        </div>
