--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-footer/create-test-footer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-footer/create-test-footer.html
@@ -17,9 +17,7 @@
     </div>
     <div class="buttons-block pull-right" *ngIf="isTestSettings">
       <button type="button"  class="btn" [disabled]="isValid||settingsForm.invalid || validStartDate || validEndDate || validTime" (click)="updateTestSettings()">Save & Exit</button>
-      <button type="button" class="btn btn-primary" *ngIf="(!testDetails.isLaunched && !testDetails.isPaused)"  [disabled]="settingsForm.invalid || validStartDate || validEndDate || validTime" (click)="saveAndLaunchTest()">Save & Launch</button>
-        <button type="button" class="btn btn-primary" *ngIf="(testDetails.isLaunched && !testDetails.isPaused)"  (click)="pauseTest()">Pause</button>
-        <button type="button" class="btn btn-primary" *ngIf="(testDetails.isPaused && testDetails.isLaunched)" (click)="resumeTest()">Resume</button>
+      <button type="button" class="btn btn-primary"  [disabled]="settingsForm.invalid || validStartDate || validEndDate || validTime" (click)="launchTestDialogBox()">Save & Launch</button>
     </div>
   </div>
 </div>
