--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -28,7 +28,7 @@
                                     <button md-menu-item [disabled]="!test.isEditTestEnabled" (click)="editTest(test)">Edit</button>
                                     <button md-menu-item (click)="deleteTestDialog(test)">Delete</button>
                                     <button md-menu-item (click)="duplicateTestDialog(test)">Duplicate</button>
-                                    <button md-menu-item [routerLink]="[test.id,'settings']">Settings</button>
+                                    <button md-menu-item [disabled]="!test.isEditTestEnabled" [routerLink]="[test.id,'settings']">Settings</button>
                                 </md-menu>
                             </div>
                             <div class="test-details">
