--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -28,7 +28,6 @@
                     <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.endDate" name="End Date" (mouseup)="isEndDateValid(testDetails.endDate)"  />
                     <div class="errors-container">
                         <span class="error-msg" *ngIf="validEndDate">End DateTime must be greater than Start DateTime</span>
-                        <span class="error-msg" *ngIf="isValid">End date can be only increased</span>
                     </div>
                 </div>
                 <div class="form-group ip-restrictions-field">
@@ -112,7 +111,7 @@
                         <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
                     </div>
                 </div>
-                <create-test-footer [testDetails]="testDetails" (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails,$event)" (saveLaunch)="saveAndLaunch($event)" (pause)=" pause($event)" (resume)="resume($event)" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
+                <create-test-footer [testDetails]="testDetails" (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails,$event)"   [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
             </div>
         </div>
     </form>
